vlib/v/parser/tests/generic_struct_receiver_nested_generic_err.vv
struct Foo<T> {
	bar T
}

fn (a Foo<Foo<T>>) baz() {}
